Resolve current orientation after applying the previous orientation request.

An application may request to lock to portrait (primary/secondary), the
lock to specific orientation by sending CURRENT (no sensor/lock).
Current implement does not support this scenario because it looks to
the current device's orientation even if that orientation was for other apps.

This CL addresses this issue by waiting until the window is activated.

BUG=708202
TEST=covered by unit test, plus manual tests using sample app.

Review-Url: https://codereview.chromium.org/2792973002
Cr-Commit-Position: refs/heads/master@{#462206}

Former-commit-id: 4f5b7f72da4ca1534233252c673f9c162bdb25f9